02_Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ""
  namespace: ""
spec:
  replicas: ""
  selector:
    matchLabels:
      app: ""
  template:
    metadata:
      labels:
        app: ""
    spec:
      containers:
      - image: ""
        name: ""
