02_Kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: ""
  name: ""
  namespace: ""
spec:
  containers:
  - image: ""
    name: ""
